--- a/movies/src/index.css
+++ b/movies/src/index.css
@@ -58,3 +58,18 @@
     @apply dark bg-background text-foreground;
   }
 }
+
+.text-on-white {
+  color: #fff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); 
+}
+
+
+::-webkit-scrollbar {
+  width: 10px; 
+  height: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+}
